--- a/Project.adoc
+++ b/Project.adoc
@@ -2,9 +2,10 @@
 // PROJECT book
 //
 // Template for requirement:
-//[[ex-keyword]] 
-//`{counter:project}`
-// Requirement
+//---- Requirement
+// :px-keyword: {counter:px}
+// [[px-keyword]]
+// `{px-keyword}`
 
 // {missing} [Corresponding Artifact]
 //------------------------------------
@@ -21,11 +22,12 @@
 // Approval information. 
 ====
 
-=== P.1 Roles
+=== P.1 Roles and personnel
 
 //---- Requirement
+:p1-roles: {counter:p1}
 [[p1-roles]]
-`{counter:project}`
+`{p1-roles}`
 Here are the roles for the production of the {companion}:
 
 - Leader: The person in charge of leading and organizing the writing effort.
@@ -34,11 +36,10 @@ Here are the roles for the production of the {companion}:
 
 {check} {companionURL}/#_book_templates[Corresponding Artifact]
 
-=== P.2 Personnel characteristics and constraints
-
 //---- Requirement
-[[p2-persons]]
-`{counter:project}`
+:p1-persons: {counter:p1}
+[[p1-persons]]
+`{p1-persons}`
 Here are the identified people involved in the development of the {companion}:
 
 - Leader: The writing effort of the {companion} is under the responsibility of {jmb}.
@@ -62,33 +63,41 @@ Needs::
 
 {missing} [Corresponding Artifact]
 
-=== P.3 Imposed technical choices
+=== P.2 Imposed technical choices
 
 //---- Requirement
-[[p3-English]]
-`{counter:project}`
+:p2-english: {counter:p2}
+[[p2-english]]
+`{p2-english}`
 The {companion} should be written in English.
 
 //---- Requirement
-[[p3-Springer]]
-`{counter:project}`
+:p2-Springer: {counter:p2}
+[[p2-Springer]]
+`{p2-Springer}`
 The {companion} should be written in one of the compatible inputs of the publisher, Springer.
 
 {missing} [Corresponding Artifact]
 
-=== P.4 Schedule and milestones
+=== P.3 Schedule and milestones
 
 //---- Requirement
-[[p4-date]]
-`{counter:project}`
+:p3-date: {counter:p3}
+[[p3-date]]
+`{p3-date}`
 The expected date of the {companion} is the end of June.
 
-=== P.5 Tasks and deliverables
+=== P.4 Tasks and deliverables
 
 //---- Requirement
+:p4-repo: {counter:p4}
 [[p4-repo]]
-`{counter:project}`
+`{p4-repo}`
 The tasks are managed through the use of a collaborative repository: {companionGit}. 
+
+=== P.5 Required technology elements
+
+{emptysec}
 
 === P.6 Risk and mitigation analysis
 
