--- a/changelog.adoc
+++ b/changelog.adoc
@@ -13,6 +13,7 @@
 | 1.2.3 | 2023-08-02 | Add an example of business constraint and its rational in E.3, by {jmb}
 | 1.2.4 | 2023-08-24 | Add an example of Assumption in E.4, and add Minimum Outcome Principle feature, by {jmb}
 | 1.2.5 | 2023-08-25 | Fix Standard plan updates, by {jmb}
+| 1.2.6 | 2023-08-27 | Add Scenarios and authors, by {jmb}
 | _{version}_ | _{localdate}_ | _Current PDF version, by {jmb}_
 |=== 
 //----------------------------------------------
