🐛 FIX: Marginal updates in some Asciidoc variables

--- a/Environment.adoc
+++ b/Environment.adoc
@@ -17,7 +17,7 @@ This section defines the domain-specific terms used in this document.
 It also lists the icons used in this document.
 
 [[e1-terms]]
-==== `{counter:e1}` Terms
+==== `E.1.{counter:e1}` Terms
 
 [[companion]]
 {companion}:: The _system_ to be developed: the companion book of {Handbook}. Current version available {companionURL}[here].
@@ -25,7 +25,7 @@ It also lists the icons used in this document.
 [[Handbook]]
 {Handbook}:: The book, entitled "Handbook of requirements and business analysis", written by Bertrand Meyer (see PDF {HandbookPDF}[here]), and for which the {companion} serves as complementary material.
 
-==== `{counter:e1}` Icons
+==== `E.1.{counter:e1}` Icons
 
 Here is the list of significations for the icons used when tracing the corresponding artifacts:
 
@@ -49,25 +49,25 @@ Here is the list of significations for the icons used when tracing the correspon
 
 :e3-method: {counter:e3}
 [[e3-method]]
-`{e3-method}`
+`E.3.{e3-method}`
 The {companion} should itself apply the method described in the {Handbook}. 
 
 :e3-pages: {counter:e3}
 [[e3-pages]]
-`{e3-pages}` 
+`E.3.{e3-pages}` 
 //From an email by Springer's contact on August, 2nd 2023.
 The {companion} should reach at least 160-170 pages.
 
 :e3-pages-rational:  {counter:e3}
 [[e3-pages-rational]]
-`{e3-pages-rational}` 
+`E.3.{e3-pages-rational}` 
 The rational for requirement <<e3-pages,E.3.{e3-pages}>> is: in order to have a sufficient distinction from the https://www.springer.com/series/10028[SpringerBriefs].
 
 === E.4 Assumptions
 
 :e4-review: {counter:e4}
 [[e4-review]]
-`{e4-review}`
+`E.4.{e4-review}`
 The {companion} will be reviewed by the author of the {Handbook}. 
 
 === E.5 Effects
